log
Fri Apr 17 01:03:40 AM UTC 2026: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 5/60
9e8782d
Fri Apr 17 01:04:20 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
ce564eb
Fri Apr 17 01:04:52 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
f2ae0c5
Fri Apr 17 06:37:18 PM UTC 2026: 
 hashmap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  1|6
total_score: 5/60
aa822e8
Fri Apr 17 06:40:40 PM UTC 2026: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:96:12: error: statement with no effect [-Werror=unused-value]
   96 |         map->current
      |         ~~~^~~~~~~~~
hashmap.c:96:21: error: expected ‘;’ before ‘}’ token
   96 |         map->current
      |                     ^
      |                     ;
   97 |     }
      |     ~                
hashmap.c:104:20: error: statement with no effect [-Werror=unused-value]
  104 |                 map->current
      |                 ~~~^~~~~~~~~
hashmap.c:104:29: error: expected ‘;’ before ‘}’ token
  104 |                 map->current
      |                             ^
      |                             ;
  105 |             }
      |             ~                
cc1: all warnings being treated as errors
6158a6c
Fri Apr 17 06:40:55 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:96:12: error: statement with no effect [-Werror=unused-value]
   96 |         map->current;
      |         ~~~^~~~~~~~~
hashmap.c:104:20: error: statement with no effect [-Werror=unused-value]
  104 |                 map->current;
      |                 ~~~^~~~~~~~~
cc1: all warnings being treated as errors
c08ac22
Fri Apr 17 06:41:23 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 5/60
51de1b7
Fri Apr 17 06:43:17 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 5/60
baca5f5
Fri Apr 17 06:45:13 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
7cd3ec4
Fri Apr 17 06:47:34 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
58239d8
Fri Apr 17 06:48:08 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|6
total_score: 5/60
f567c2b
Fri Apr 17 06:48:47 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
982b43c
Fri Apr 17 06:50:38 PM UTC 2026: 
 tests:  0|0
3324e69
Fri Apr 17 06:52:45 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:101:18: error: conversion lacks type at end of format [-Werror=format=]
  101 |         printf("%l", pos);
      |                  ^
hashmap.c:101:16: error: too many arguments for format [-Werror=format-extra-args]
  101 |         printf("%l", pos);
      |                ^~~~
cc1: all warnings being treated as errors
6778d0f
Fri Apr 17 06:58:01 PM UTC 2026: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|6
total_score: 5/60
81cb6c1
Fri Apr 17 07:00:56 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|6
total_score: 5/60
ed85aa7
Fri Apr 17 07:01:08 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7b605f5
Fri Apr 17 07:02:51 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
2caad9b
Fri Apr 17 07:05:22 PM UTC 2026: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  4|5
total_score: 15/60
f1dd635
Fri Apr 17 07:13:22 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 15/60
ed6a527
Fri Apr 17 07:14:17 PM UTC 2026: 
 hashmap.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  4|5
total_score: 15/60
52210f2
Fri Apr 17 07:28:51 PM UTC 2026: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 15/60
8555a74
Fri Apr 17 07:37:31 PM UTC 2026: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|5
total_score: 15/60
f4896ca
Sat Apr 18 01:25:37 AM UTC 2026: 
 hashmap.c | 28 +++++++++++++++++++++++++---
 1 file changed, 25 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:84:38: error: expected ‘;’ before ‘}’ token
   84 |             if(pos == auxiliar) break
      |                                      ^
      |                                      ;
   85 |         }
      |         ~                             
950410a
Sat Apr 18 01:25:48 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 30/60
cd5f058
Sat Apr 18 01:35:41 AM UTC 2026: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  8|3
total_score: 30/60
3c291ec
Sat Apr 18 01:36:00 AM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 30/60
b6b0cc2
Sat Apr 18 01:40:52 AM UTC 2026: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|2
total_score: 40/60
03320ad
Sat Apr 18 01:46:21 AM UTC 2026: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  13|2
total_score: 40/60
f7e72c2
Sat Apr 18 01:48:08 AM UTC 2026: 
 tests:  13|2
total_score: 40/60
b5d9fe9
Sat Apr 18 01:49:04 AM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|2
total_score: 40/60
561448e
Sat Apr 18 01:54:34 AM UTC 2026: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  16|1
total_score: 50/60
064e143
